ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: my-namespace
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  selector:
    name: nginx-ingress
